--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     buildToolsVersion "31.0.0"
 
     defaultConfig {
-        applicationId "com.kelin.proxyfactory"
+        applicationId "com.kelin.proxyfactorydemo"
         minSdkVersion 16
         targetSdkVersion 31
         versionCode 1
