--- a/ProxyFactory/build.gradle
+++ b/ProxyFactory/build.gradle
@@ -42,7 +42,7 @@ dependencies {
     implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
 
     //ApiException
-    api 'com.github.kelinZhou:ApiException:eb255ca6b6'
+    implementation 'com.github.kelinZhou:ApiException:eb255ca6b6'
 }
 
 
