--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,5 +36,9 @@ dependencies {
 
 
     implementation project(path: ':ProxyFactory')
+
+    //ApiException
+    implementation 'com.github.kelinZhou:ApiException:1.1.1'
+
     implementation "io.reactivex.rxjava2:rxjava:2.2.21"
 }
