--- a/ProxyFactory/build.gradle
+++ b/ProxyFactory/build.gradle
@@ -42,7 +42,7 @@ dependencies {
     implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
 
     //ApiException
-    implementation 'com.github.kelinZhou:ApiException:1.1.1'
+    api 'com.github.kelinZhou:ApiException:1.2.0'
 }
 
 
